log/build_2024-11-08_21-49-32/system_controller/stdout_stderr.log
running egg_info
writing ../../build/system_controller/system_controller.egg-info/PKG-INFO
writing dependency_links to ../../build/system_controller/system_controller.egg-info/dependency_links.txt
writing entry points to ../../build/system_controller/system_controller.egg-info/entry_points.txt
writing requirements to ../../build/system_controller/system_controller.egg-info/requires.txt
writing top-level names to ../../build/system_controller/system_controller.egg-info/top_level.txt
reading manifest file '../../build/system_controller/system_controller.egg-info/SOURCES.txt'
writing manifest file '../../build/system_controller/system_controller.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/csanimatronics/CS_Animatronics/install/system_controller/lib/python3.12/site-packages/system_controller/system_controller.py to system_controller.cpython-312.pyc
  File "/home/csanimatronics/CS_Animatronics/install/system_controller/lib/python3.12/site-packages/system_controller/system_controller.py", line 54
    ids = [0 0]
           ^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

running install_data
running install_egg_info
removing '/home/csanimatronics/CS_Animatronics/install/system_controller/lib/python3.12/site-packages/system_controller-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/system_controller/system_controller.egg-info to /home/csanimatronics/CS_Animatronics/install/system_controller/lib/python3.12/site-packages/system_controller-0.0.0-py3.12.egg-info
running install_scripts
Installing controller_publisher script to /home/csanimatronics/CS_Animatronics/install/system_controller/lib/system_controller
Installing system_controller script to /home/csanimatronics/CS_Animatronics/install/system_controller/lib/system_controller
writing list of installed files to '/home/csanimatronics/CS_Animatronics/build/system_controller/install.log'
